--- a/examples/Stats/all_stats-0001/stat.yaml
+++ b/examples/Stats/all_stats-0001/stat.yaml
@@ -7,19 +7,15 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
+var: "T2M"
+
+fcst_model: "HRRR"
 # Forecast Configuration
 fcst_file_template: "../input_files/HRRR/hrrr.{year}{month}{day}{hour}.wrfprsf{lead_time}.T2M.grib2"  # Reference file template
-fcst_var: "2t"                    # Forecast variable name
-fcst_level: 2
-fcst_type_of_level: "heightAboveGround"
-shift: 0                          # Time shift (if any)
 
-
+ref_model: "HRRR"
 # Reference Configuration
 ref_file_template: "../input_files/HRRR/hrrr.{valid_year}{valid_month}{valid_day}{valid_hour}.wrfprsf00.T2M.grib2"
-ref_var: "2t"  
-ref_level: 2
-ref_type_of_level: "heightAboveGround" #"heightAboveGround"
                
 
 # Output Configuration
@@ -48,4 +44,4 @@ interpolation: false               # Whether to interpolate data
 target_grid: "../input_files/REF/ref_2024040102_f001.nc"   # Target grid specification
 
 # Parallel Processing
-processes: 100                     # Number of processes to run in parallel
+processes: 1                     # Number of processes to run in parallel
