--- a/examples/Stats/all_stats-0003/stat.yaml
+++ b/examples/Stats/all_stats-0003/stat.yaml
@@ -7,20 +7,15 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
+var: "T2M"                    # Forecast variable name
+
 # Forecast Configuration
 fcst_file_template: "../input_files/REF/ref_{year}{month}{day}{hour}_f0{lead_time}.nc"  # Reference file template
-fcst_var: "T2M"                    # Forecast variable name
-fcst_level: 2
-fcst_type_of_level: "level"
-shift: 0                          # Time shift (if any)
-
+fcst_model: "resHRRR"
 
 # Reference Configuration
 ref_file_template: "../input_files/HRRR/hrrr.{valid_year}{valid_month}{valid_day}{valid_hour}.wrfprsf00.T2M.grib2"
-ref_var: "2t"  
-ref_level: 2
-ref_type_of_level: "heightAboveGround" #"heightAboveGround"
-               
+ref_model: "HRRR"
 
 # Output Configuration
 output_dir: "."  # Directory to save outputs
