--- a/examples/Stats/all_stats-0001/stat.yaml
+++ b/examples/Stats/all_stats-0001/stat.yaml
@@ -7,7 +7,7 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
-var: "T2M"
+vars: "T2M"
 
 fcst_model: "HRRR"
 # Forecast Configuration
