--- a/examples/Stats/all_stats-0002/stat.yaml
+++ b/examples/Stats/all_stats-0002/stat.yaml
@@ -7,7 +7,7 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
-var: "T2M"
+vars: "T2M"
 
 # Forecast Configuration
 fcst_file_template: "../input_files/HRRR/hrrr.{year}{month}{day}{hour}.wrfprsf{lead_time}.T2M.grib2"  # Reference file template
