--- a/examples/Stats/all_stats-0003/stat.yaml
+++ b/examples/Stats/all_stats-0003/stat.yaml
@@ -7,7 +7,7 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
-var: "T2M"                    # Forecast variable name
+vars: "T2M"                    # Forecast variable name
 
 # Forecast Configuration
 fcst_file_template: "../input_files/REF/ref_{year}{month}{day}{hour}_f0{lead_time}.nc"  # Reference file template
