--- a/examples/WE2E/reflectivity_ge15/refc-REF.yaml
+++ b/examples/WE2E/reflectivity_ge15/refc-REF.yaml
@@ -7,7 +7,7 @@ start_lead_time: 1
 end_lead_time: 1
 interval_lead_time: 1
 
-var: "REFC"
+vars: "REFC"
 
 # Forecast Configuration
 fcst_file_template: "../input_files/REF/proc_{year}-{month}-{day}T{hour}:00:00_f0{lead_time}.nc"
